--- a/package.json
+++ b/package.json
@@ -15,12 +15,11 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "predeploy" : "npm run build",
-    "deploy" : "gh-pages -d build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
-    
   },
   "eslintConfig": {
     "extends": [
@@ -28,6 +27,7 @@
       "react-app/jest"
     ]
   },
+  "homepage": "https://github.com/sidssharma/Autoschedule.git",
   "browserslist": {
     "production": [
       ">0.2%",
